--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "tailwind-heropatterns": "^0.0.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
