--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "next-nprogress-bar": "^2.3.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
